# soda_infrastructure_manager

./: README.md  setup.cfg  setup.py
cmd/: api.py
controllers/alert_manager/: api.py
docs/: README.rst
