[metadata]
name = infra_structure_manager
summary = An infrastructure management project for  SODA Foundation
author = SODA Foundation
author-email = opensds-tech-discuss@lists.opensds.io
home-page = https://www.opensds.io/
classifier =
    Environment :: OpenSDS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


packages =
    infra_structure_manager

[entry_points]
console_scripts =
    infrastructure_management_start = infra_structure_manager.cmd.api:main
